--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ layout: home
 <div class="container">
   <p><strong>Hello, My name is Cheney Zhang.</strong></p>
   <p>I am a Java developer and also an independent software developer. In my spare time, I am preparing to build a set of Java based tools, hoping to contribute to the open source world and also hoping that someone will benefit from my open source software in the future.</p>
-  <cite>This is my homepage: <a>https://cheneyzhang.me/</a></cite>
+  <cite>This is my homepage: <a href="https://cheneyzhang.me/" target="_blank">https://cheneyzhang.me/</a></cite>
 </div>
