change directory structrue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@ layout: home
 </style>
 
 <div class="container">
-  <p><strong>Hello, My name is Cheney Zhang.</strong></p>
-  <p>I am a Java developer and also an independent software developer. In my spare time, I am preparing to build a set of Java based tools, hoping to contribute to the open source world and also hoping that someone will benefit from my open source software in the future.</p>
-  <cite>This is my homepage: <a href="https://cheneyzhang.me/" target="_blank">https://cheneyzhang.me/</a></cite>
+  <h4 class="heading h2 font-weight-bold">1. Introduction</h4>
+  <p>Free and fast generation of application frameworks.</p>
+  
+  <h4 id="download">2. Language, Framework and Dependencies</h4>
+  <p>Based on the <strong>Java</strong> Language and Java technology stack, mainly related to the <strong>spring frameworks</strong>.
+  
+  <h4 id="download">3. Project Related</h4>
+  <p>At persent, the main focus is on <strong>Maven</strong> projects, providing compliation, packaging, and deployment capabilties.
+  
+  <h4 id="download">4. Project Metadata</h4>
+    <p>FastStarter is mainly based on the Java language, so currently supported project metadata include the following: </p>
+    <ul>
+      <li>Group : <code>com.example</code></li>
+      <li>Artifact : <code>demo</code></li>
+      <li>Name : <code>demo</code></li>
+      <li>Description : <code>Demo project for Spring Boot</code></li>
+      <li>Package name : <code>com.example.demo</code></li>
+      <li>Packaging : <code>Jar War</code></li>
+      <li>Java Version : <code>11 17 21 22</code></li>
+    </ul>
 </div>
